projects/react-express-mongo-app/ui/kubernetes/react-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-ui-service
spec:
  type: ClusterIP
  selector:
    app: react-ui

  ports:
  - name: react-ui-port
    protocol: TCP
    port: 80
    targetPort: 80
