projects/react-express-mongo-app/ui/kubernetes/dev-backend-app-ingress-rule.yaml
# vi dev-namespace-inress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-backend-app-ingress-rule
#  annotations:
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-ui-service
            port:
              number: 80
